--- a/.well-known/funding-manifest.json
+++ b/.well-known/funding-manifest.json
@@ -19,7 +19,7 @@
       "name": "EnergyAI",
       "description": "EnergyAI is an AI-integrated open-source software platform designed to manage, monitor, and optimize IoT-connected renewable energy systems across diverse African climates. It supports solar and wind microgrids, remote sensors, smart batteries, and load controllers in areas with low connectivity and infrastructure challenges.",
       "webpageUrl": {
-        "url": "https://linkedIn.com/company/kowatek"
+        "url": "https://energyai.kowatek.com/"
       },
       "repositoryUrl": {
         "url": "https://github.com/kowatek/energyai",
