--- a/.well-known/funding-manifest.json
+++ b/.well-known/funding-manifest.json
@@ -9,7 +9,7 @@
     "phone": "",
     "description": "I am a developer and founder of Kowatek Solar LTD and Iwuchi Technologies LTD, building AI-integrated open-source solutions to optimize renewable energy systems in Africa. I believe in open innovation and the power of localizing technology to serve diverse climates and communities across the continent.",
     "webpageUrl": {
-      "url": "https://energyai.kowatek.com/",
+      "url": "https://linkedIn.com/company/kowatek",
       "wellKnown": ""
     }
   },
@@ -23,7 +23,7 @@
       },
       "repositoryUrl": {
         "url": "https://github.com/kowatek/energyai",
-        "wellKnown": ""
+        "wellKnown": "https://github.com/kowatek/energyai/blob/main/.well-known/funding-manifest.json"
       },
       "licenses": ["spdx:AGPL-3.0"],
       "tags": ["renewable-energy", "AI", "IoT", "Africa", "open-source", "energy-access"]
